--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rocketchat",
-  "productName": "Rocket.Chat",
-  "description": "Rocket.Chat Native Cross-Platform Desktop Application via Electron.",
+  "name": "hiplounge",
+  "productName": "HipLounge",
+  "description": "HipLounge Native Cross-Platform Desktop Application via Electron.",
   "version": "2.14.1",
   "author": "Rocket.Chat Support <support@rocket.chat>",
   "copyright": "© 2018, Rocket.Chat",
