--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,4 +1,4 @@
-owner: oesolution
-repo: rocket.chat.electron
-provider: gitlab
+owner: RocketChat
+repo: Rocket.Chat.Electron
+provider: github
 vPrefixedTagName: false
