--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "productName": "HipLounge",
   "description": "HipLounge Native Cross-Platform Desktop Application via Electron.",
   "version": "2.14.1",
-  "author": "Rocket.Chat Support <support@rocket.chat>",
-  "copyright": "© 2018, Rocket.Chat",
-  "homepage": "https://rocket.chat",
-  "license": "MIT",
+  "copyright": "© 2018",
+  "license": "UNLICENSED",
+  "private": true,
   "main": "app/background.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/RocketChat/Rocket.Chat.Electron.git"
+    "url": "https://gitlab.com/oesolution/rocket.chat.electron"
   },
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
