142 try fix startup and small fixes (change url gitlab ..)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "app/background.js",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/oesolution/rocket.chat.electron"
+    "url": "https://gitlab.com/oesolution/myco/hiplounge/client"
   },
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
