--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "productName": "HipLounge",
   "description": "HipLounge Native Cross-Platform Desktop Application via Electron.",
   "version": "2.14.1",
-  "copyright": "© 2018",
+  "copyright": "© 2018 HipLounge",
+  "author": "Rocket.Chat Support <support@rocket.chat>",
+  "homepage": "https://intranet.tui-takeoff.de",
   "license": "UNLICENSED",
   "private": true,
   "main": "app/background.js",
