--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hiplounge",
   "productName": "HipLounge",
   "description": "HipLounge Native Cross-Platform Desktop Application via Electron.",
-  "version": "2.14.6",
+  "version": "2.14.6-1",
   "copyright": "© 2018 HipLounge",
   "author": "Rocket.Chat Support <support@rocket.chat>",
   "homepage": "https://intranet.tui-takeoff.de",
