--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@paulcbetts/system-idle-time": "^1.0.4",
     "electron-pdf-window": "^1.0.12",
-    "electron-updater": "4.0.0",
+    "electron-updater": "3.0.4",
     "freedesktop-notifications": "^1.2.3",
     "fs-jetpack": "^2.2.0",
     "lodash": "^4.17.11",
@@ -46,7 +46,7 @@
     "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.11",
     "electron": "^2.0.14",
-    "electron-builder": "^20.28.4",
+    "electron-builder": "20.28.4",
     "electron-mocha": "^6.0.4",
     "eslint": "^5.9.0",
     "gulp": "^3.9.1",
